# vcf_batcher

./: .gitignore  Cargo.toml  LICENSE  README.md  vcf_batcher.pyi
.github/workflows/: build.yml  maturin.yml
src/: batch.rs  lib.rs  main.rs
