[package]
name = "vcf_batcher"
description = "Rust crate to cut VCF (variant call files) into smaller batches, intended to be used for multiprocessing or distributed computing."
version = "0.1.0"
edition = "2021"
authors = ["Gérôme Meyer <gerome.meyer@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GeroVanMi/vcf_batcher"
repository = "https://github.com/GeroVanMi/vcf_batcher"
keywords = ["vcf", "batch", "multiprocessing", "batching", "variant_call_file", "1000Genomes", "distributed"]
categories = ["command-line-utilities"]

[dependencies]
bgzip = { version = "0.3.1", features = ["rayon"] }
clap = { version = "4.2.4", features = ["derive"] }
either = "1.8.1"
indicatif = "0.17.3"
time = "0.3.20"
